--- a/style.css
+++ b/style.css
@@ -35,12 +35,14 @@ body {
 }
 
 .container {
-    max-width: 900px;
+    max-width: 750px;
     margin: 0 auto;
+ 
 }
 
 .form__wrapper {
     padding: 0 35px;
+    background-color: rgba(27, 27, 50, 0.8);
 }
 
 .form {
@@ -52,6 +54,7 @@ body {
 .input {
     font-size: 20px;
     margin-bottom: 5px;
-    padding: 5px 10px
+    padding: 10px 15px;
+    border-radius: 5px;
 }
 
