--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ a, input, form {
     border: none;
     outline: none;
 }
+label {
+    padding-bottom: 7px;
+    font-size: 20px;
+}
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -31,7 +35,11 @@ body {
 }
 
 .header__title {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+}
+
+.header__subtitle {
+    margin-bottom: 35px;
 }
 
 .container {
@@ -41,7 +49,7 @@ body {
 }
 
 .form__wrapper {
-    padding: 0 35px;
+    padding: 40px 35px;
     background-color: rgba(27, 27, 50, 0.8);
 }
 
@@ -51,8 +59,14 @@ body {
     
 }
 
+.form-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
 .input {
-    font-size: 20px;
+    font-size: 17px;
     margin-bottom: 5px;
     padding: 10px 15px;
     border-radius: 5px;
